new css background gradient cuz im cool or something

--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-body {background-color: black;}
+body {    background-image: linear-gradient(rgb(0, 0, 0), rgb(54, 54, 54));}
 body {
     color: whitesmoke
 }
@@ -15,17 +15,17 @@ font-variant: normal;
 text-transform: none;
 }
 h1 {
-    color: rgb(157, 141, 19);
-    font-family: "Lucida Console", Monaco, monospace;
+    font-family: Verdana, Geneva, sans-serif;
     font-size: 25px;
     letter-spacing: 0px;
     word-spacing: 0px;
-    color: rgb(157, 141, 19);
+    color: rgb(255, 255, 255);
     font-weight: 400;
     text-decoration: none;
     font-style: normal;
     font-variant: normal;
     text-transform: none;
+    text-shadow: 2px 2px #555555;
 }
 h2 {
     color: rgb(157, 141, 19);
@@ -74,11 +74,34 @@ h3 {
 	text-decoration:none;
 	text-shadow:0px 1px 0px #854629;
 }
-.myButton:hover {
+.blogbutton:hover {
 	background:linear-gradient(to bottom, #bc3315 5%, #d0451b 100%);
 	background-color:#bc3315;
 }
-.myButton:active {
+.blogbutton:active {
+	position:relative;
+	top:1px;
+}
+.tfcmd {
+	box-shadow:inset 0px 1px 0px 0px #a6827e;
+	background:linear-gradient(to bottom, #7d5d3b 5%, #634b30 100%);
+	background-color:#7d5d3b;
+	border-radius:3px;
+	border:1px solid #54381e;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Verdana;
+	font-size:13px;
+	padding:6px 24px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #4d3534;
+}
+.tfcmd:hover {
+	background:linear-gradient(to bottom, #634b30 5%, #7d5d3b 100%);
+	background-color:#634b30;
+}
+.tfcmd:active {
 	position:relative;
 	top:1px;
 }
