--- a/ramblecommon.css
+++ b/ramblecommon.css
@@ -1,4 +1,4 @@
-body {background-color: black;}
+body {    background-image: linear-gradient(rgb(0, 0, 0), rgb(54, 54, 54));}
 body {
     color: whitesmoke
 }
@@ -15,17 +15,17 @@ font-variant: normal;
 text-transform: none;
 }
 h1 {
-    color: rgb(157, 141, 19);
-    font-family: "Lucida Console", Monaco, monospace;
+    font-family: Verdana, Geneva, sans-serif;
     font-size: 25px;
     letter-spacing: 0px;
     word-spacing: 0px;
-    color: rgb(157, 141, 19);
+    color: rgb(255, 255, 255);
     font-weight: 400;
     text-decoration: none;
     font-style: normal;
     font-variant: normal;
     text-transform: none;
+    text-shadow: 2px 2px #555555;
 }
 h2 {
     color: rgb(157, 141, 19);
