changed font family

--- a/index.css
+++ b/index.css
@@ -68,7 +68,7 @@ h3 {
 	display:inline-block;
 	cursor:pointer;
 	color:#ffffff;
-	font-family:Arial;
+    font-family: Verdana, Geneva, sans-serif;
 	font-size:13px;
 	padding:6px 24px;
 	text-decoration:none;
