--- a/index.css
+++ b/index.css
@@ -60,47 +60,31 @@ h3 {
 }
 
 .blogbutton {
-  background: #A298F4;
-  background-image: -webkit-linear-gradient(top, #A298F4, #D0C1A2);
-  background-image: -moz-linear-gradient(top, #A298F4, #D0C1A2);
-  background-image: -ms-linear-gradient(top, #A298F4, #D0C1A2);
-  background-image: -o-linear-gradient(top, #A298F4, #D0C1A2);
-  background-image: -webkit-gradient(to bottom, #A298F4, #D0C1A2);
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  border-radius: 20px;
-  height: 48px;
-  line-height: 48px;
-  color: #FFFFFF;
-  font-family: Verdana;
-  width: 335px;
-  font-size: 20px;
-  font-weight: 600;
-  padding: 0;
-  -webkit-box-shadow: 1px 1px 20px 0 #000000;
-  -moz-box-shadow: 1px 1px 20px 0 #000000;
-  box-shadow: 1px 1px 20px 0 #000000;
-  text-shadow: 0 1px 8px #000000;
-  border: groove #337FED 6px;
-  text-decoration: none;
-  display: inline-block;
-  cursor: pointer;
-  text-align: center;
+	box-shadow: 0px 1px 0px 0px #fff6af;
+	background:linear-gradient(to bottom, #ffec64 5%, #ffab23 100%);
+	background-color:#ffec64;
+	border-radius:6px;
+	border:1px solid #ffaa22;
+	display:inline-block;
+	cursor:pointer;
+	color:#333333;
+	font-family:Verdana;
+	font-size:16px;
+	font-weight:bold;
+	padding:6px 24px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #ffee66;
+}
+.blogbutton:hover {
+	background:linear-gradient(to bottom, #ffab23 5%, #ffec64 100%);
+	background-color:#ffab23;
+}
+.blogbutton:active {
+	position:relative;
+	top:1px;
 }
 
-.blogbutton:hover {
-  border: groove #D0C1A2 6px;
-  background: #A298F4;
-  background-image: -webkit-linear-gradient(top, #A298F4, #000000);
-  background-image: -moz-linear-gradient(top, #A298F4, #000000);
-  background-image: -ms-linear-gradient(top, #A298F4, #000000);
-  background-image: -o-linear-gradient(top, #A298F4, #000000);
-  background-image: -webkit-gradient(to bottom, #A298F4, #000000);
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  border-radius: 20px;
-  text-decoration: none;
-}
+        
 .tfcmd {
 	box-shadow:inset 0px 1px 0px 0px #a6827e;
 	background:linear-gradient(to bottom, #7d5d3b 5%, #634b30 100%);
