--- a/index.css
+++ b/index.css
@@ -59,33 +59,8 @@ h3 {
     text-decoration: none;
 }
 
-.blogbutton {
-	box-shadow: 0px 1px 0px 0px #fff6af;
-	background:linear-gradient(to bottom, #ffec64 5%, #ffab23 100%);
-	background-color:#ffec64;
-	border-radius:6px;
-	border:1px solid #ffaa22;
-	display:inline-block;
-	cursor:pointer;
-	color:#333333;
-	font-family:Verdana;
-	font-size:16px;
-	font-weight:bold;
-	padding:6px 24px;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #ffee66;
-}
-.blogbutton:hover {
-	background:linear-gradient(to bottom, #ffab23 5%, #ffec64 100%);
-	background-color:#ffab23;
-}
-.blogbutton:active {
-	position:relative;
-	top:1px;
-}
-
         
-.tfcmd {
+.commonbutton {
 	box-shadow:inset 0px 1px 0px 0px #a6827e;
 	background:linear-gradient(to bottom, #7d5d3b 5%, #634b30 100%);
 	background-color:#7d5d3b;
@@ -100,11 +75,11 @@ h3 {
 	text-decoration:none;
 	text-shadow:0px 1px 0px #4d3534;
 }
-.tfcmd:hover {
+.commonbutton:hover {
 	background:linear-gradient(to bottom, #634b30 5%, #7d5d3b 100%);
 	background-color:#634b30;
 }
-.tfcmd:active {
+.commonbutton:active {
 	position:relative;
 	top:1px;
 }
@@ -164,6 +139,32 @@ h3 {
   .dropdown a:hover {background-color: #ddd;}
   
   .show {display: block;}
+
+/* NOT USED ANYMORE
+  .blogbutton {
+    box-shadow: 0px 1px 0px 0px #fff6af;
+    background:linear-gradient(to bottom, #ffec64 5%, #ffab23 100%);
+    background-color:#ffec64;
+    border-radius:6px;
+    border:1px solid #ffaa22;
+    display:inline-block;
+    cursor:pointer;
+    color:#333333;
+    font-family:Verdana;
+    font-size:16px;
+    font-weight:bold;
+    padding:6px 24px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #ffee66;
+  }
+  .blogbutton:hover {
+    background:linear-gradient(to bottom, #ffab23 5%, #ffec64 100%);
+    background-color:#ffab23;
+  }
+  .blogbutton:active {
+    position:relative;
+    top:1px;
+  }
 
 .aboutme {
 	box-shadow:inset 0px 1px 0px 0px #ffffff;
