--- a/index.css
+++ b/index.css
@@ -140,6 +140,31 @@ h3 {
   
   .show {display: block;}
 
+.topnav {
+  background-color: #333;
+  overflow: hidden;
+}
+
+.topnav a {
+  font-family: Verdana, Geneva, sans-serif;
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: rgb(255, 255, 255);
+  color: black;
+}
+
+.topnav a.active {
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+}
+
 /* NOT USED ANYMORE
   .blogbutton {
     box-shadow: 0px 1px 0px 0px #fff6af;
