--- a/index.css
+++ b/index.css
@@ -1,3 +1,4 @@
+html, body { height: 100% }
 body {    background-image: linear-gradient(rgb(0, 0, 0), rgb(54, 54, 54));}
 body {
     color: whitesmoke
