--- a/css/photos.css
+++ b/css/photos.css
@@ -1,5 +1,12 @@
 body {    background-image: linear-gradient(rgb(0, 0, 0), rgb(54, 54, 54));}
+html {
+  height: 100%;
+}
 body {
+    height: 100%;
+    margin: 0;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     color: whitesmoke
 }
 p {
