--- a/wb-content/issues.css
+++ b/wb-content/issues.css
@@ -165,6 +165,31 @@ h3 {
   color: rgb(0, 0, 0);
 }
 
+.returnbutton {
+	box-shadow:inset 0px 1px 0px 0px #ffffff;
+	background:linear-gradient(to bottom, #f9f9f9 5%, #e9e9e9 100%);
+	background-color:#f9f9f9;
+	border-radius:6px;
+	border:1px solid #c4c4c4;
+	display:inline-block;
+	cursor:pointer;
+	color:#666666;
+	font-family:Verdana;
+	font-size:15px;
+	font-weight:bold;
+	padding:6px 24px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #e8e8e8;
+}
+.returnbutton:hover {
+	background:linear-gradient(to bottom, #e9e9e9 5%, #f9f9f9 100%);
+	background-color:#e9e9e9;
+}
+.returnbutton:active {
+	position:relative;
+	top:1px;
+}
+
 /* NOT USED ANYMORE
   .blogbutton {
     box-shadow: 0px 1px 0px 0px #fff6af;
